# bot_content_generator

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml
alembic/versions/: 26c8090791af_.py  2a413479e6f6_.py  61df9e518a7f_.py  6258b605cd29_.py
src/: constants.py
src/client_openai/: __init__.py  client_opneai.py
src/config/: loader.py  loguru_config.py  settings.py
src/database/: engine.py  models.py  uow.py
src/database/repository/: __init__.py  promo_code.py  subscription.py  user.py
src/excel/: __init__.py  pandas.py
src/payment_system/: __init__.py  client.py
src/services/: promo_code_service.py  user_service.py
src/telegram/: filters.py  midlewares.py  prompts.py  states.py  texts.py  utils.py
src/telegram/handlers/: __init__.py  admin.py  callback.py  comand.py  message.py  owner.py  payment.py  script_generator.py  voice.py
src/telegram/keyboards/inline/: keyboards.py  keyboards_text.py
src/telegram/webhook/: __init__.py  app.py  result.py
