[project]
name = "bot-content-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "BimBimBamBam1337",email = "a94440003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp (>=3.9.0,<3.13)",
    "alembic (>=1.17.0,<2.0.0)",
    "openai (>=2.3.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic-settings (>=2.4.1,<3.0.0)",
    "pydantic (>=2.4.1,<2.12)",
    "aiogram (>=3.22.0,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]

[tool.poetry]
packages = [{include = "bot_content_generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
